src/components/MainFilter.css
.main-filter {
    overflow: hidden;
    background-color: #a86b12;
    min-width: 100%;
    min-height: 70px;
    display: flex;
    align-content: center;
    z-index: 1;
}

.stickyPlaceHolder {
    background-color: #a86b12;
}

@media screen and (min-width: 800px) {

    .main-filter {
        min-height: 40px;
    }

    .main-filter > .return-button {
        display: none !important;
    }

    .scroll-up-button{
        display: flex;
        flex-direction: row;
        min-width: 11rem;
    }

    .scroll-up-button > img{
        max-height: 1.5rem !important;
        padding: 0 1rem 0 .5rem;
    }

    .main-filter > .scroll-up-button:hover > img {
        max-height: 1.7rem !important;
        margin: -.1rem !important;
    }

    .main-filter > .filter-icons {
        justify-content: flex-end!important;
        margin-left: 3rem;
    }

    .main-filter > div > .filter-icon {
        max-height: 1.9rem !important;
        margin-right: 1rem !important;
    }

    .main-filter > div > .filter-icon:hover {
        max-height: 2.1rem !important;
        margin: -0.1rem .9rem -.1rem -.1rem !important;


    }
}

.main-filter > .scroll-up-button > p {
    color: white;
    font-family: Montserrat-Regular, sans-serif;
    font-weight: bold;
    font-size: .8rem;
}

@media screen and (max-width: 800px) {
    .main-filter {
        position: fixed;
        bottom: 0;
        box-shadow: 0 -5px 5px 1px rgba(0, 0, 0, .3);
    }

    .main-filter > div > .filter-icon {
        max-height: 50px;
        margin-right: 2vw !important;
    }

    .scroll-up-button {
        max-width: 80px !important;
    }

    .scroll-up-button > p {
        display: none !important;
    }

    .main-filter > .scroll-up-button > img,
    .main-filter > .return-button > img {
        max-height: 45px;
    }

    .main-filter.character-selected > .return-button {
        display: flex !important;
    }
}

@media screen and (max-width: 450px) {
    .main-filter.character-selected > div {
        justify-content: center !important;
    }
    .main-filter.character-selected > span{
        display: none;
    }
}

@media screen and (max-width: 320px) {
    .main-filter > span {
        display: none;
    }

    .main-filter > div {
        justify-content: center !important;
    }

    .main-filter > div > .filter-icon {
        margin-right: 0 !important;
    }
}

.main-filter > .return-button {
    display: none !important;
}

.main-filter > span {
    color: white;
    font-family: sans-serif;
    letter-spacing: .03em;
    font-weight: bold;
    margin-left: 2.5vh;
    min-width: 10vh;
    align-self: center;
    font-size: 1.2rem;
}

.main-filter > div {
    display: flex;
    flex-direction: row-reverse;
    justify-content: right;
    align-content: center;
    align-self: center;
    flex-grow: 1;
}

.main-filter > div > .filter-icon {
    max-height: 50px;
    margin-right: 20px;
    cursor: pointer;
}

.selected-filter {
    -webkit-filter: invert(30%) sepia(35%) saturate(3007%) hue-rotate(193deg);
    filter: invert(30%) sepia(35%) saturate(3007%) hue-rotate(193deg);
}

.main-filter > .scroll-up-button,
.main-filter > .return-button {
    background-color: #232323;
    align-self: stretch;
    display: flex;
    align-content: center;
    justify-content: center;
    max-width: 80px;
    cursor: pointer;
}

.main-filter > .scroll-up-button > img,
.main-filter > .return-button > img {
    align-self: center;
}

.scroll-up-button > img {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    transform: rotate(180deg);
}

.return-button > img {
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    transform: rotate(90deg);
}
.main-container {
    display: flex;
    flex-direction: row;
    background-color: #c9c9c9;
}

.sticky + .main-container  {
    padding-top: 40px;
}

@media screen and (min-width: 800px) {
    .counter-container {
        position: fixed;
        overflow-y: scroll;
        max-height: 100%;
        max-width: 33vw;
        min-width: 33vw;
        right: 0;
    }

    .sticky {
        box-shadow: -4px 0 10px 4px rgba(0, 0, 0, .3) !important;
    }

    .sticky + .main-container > .counter-container {
        margin-top: -49px !important;
        position: fixed;
    }
}

